# edged

./: Cargo.toml  FINDINGS.md  Makefile  README.md
burn-edged/: Cargo.toml
burn-edged/src/: lib.rs
re-coral/: book.toml
re-coral/src/: SUMMARY.md  intro.md  overview.md  process.md
src/: buffer.rs  chip.rs  error.rs  flatbuffers.rs  interrupt.rs  lib.rs  main.rs  request.rs
src/dma/: chunker.rs  mod.rs
src/executable/: mod.rs  util.rs
src/flatbuffers/: driver_options.rs  executable.rs  tflite_model.rs
src/memory/: coherent_alloc.rs  mod.rs
src/package/: mod.rs
src/pcie/: ioctl.rs  mod.rs
src/usb/: dfu.rs  io.rs  ml.rs  mod.rs
